...
                .background(Color(.systemGray))
                .foregroundColor(.white)
                .cornerRadius(20)
            }
        }
        .padding()
        .navigationBarTitle("Active users")
        .navigationBarItems(
            leading: Text(viewModel.userName).foregroundColor(.gray),
            trailing: ExitButton(title: "Log out", action: viewModel.logout))
        .onAppear(perform: viewModel.didAppear)
        .onDisappear(perform: viewModel.didDisappear)
        .fullScreenCover(isPresented: $viewModel.isNotAuthorized) {
            viewModel.go(to: .authorization)
        }
    }
...
